Fix text wrapping in discussion board posts

--- a/restaurant/static/restaurant/base.css
+++ b/restaurant/static/restaurant/base.css
@@ -84,7 +84,8 @@ a.article-title:hover {
 }
 
 .card-img-top {
-    max-width: 200px;
+    max-width: 100%;
     max-height: 15vw;
     object-fit: cover;
+    /* Center the image */
 }
